# netanel-core-validation

./: .coderabbit.yaml  .gitignore  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  LICENSE  PLAN.md  README.md  TWELVE_GATES_V4.md  pyproject.toml
.github/workflows/: validate.yml
validation/: __init__.py  artifacts.py  assertions.py  config.py  lifecycle.py  metrics.py  validator.py
validation/scenarios/: __init__.py  conftest.py  test_basic_learning.py  test_edge_cases.py  test_full_loop.py  test_stress.py
validation/tasks/: __init__.py  code_generation.py
